# ChangeLog for media-libs/tiff
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.96 2007/07/12 08:54:26 uberlord Exp $

  12 Jul 2007; Roy Marples <uberlord@gentoo.org> tiff-3.8.2-r2.ebuild:
  Keyworded ~sparc-fbsd

  21 Jun 2007; Tavis Ormandy <taviso@gentoo.org> tiff-3.8.2-r2.ebuild:
  fix homepage

  30 Apr 2007; Marius Mauch <genone@gentoo.org> tiff-3.8.2-r2.ebuild:
  Replacing einfo with elog

  04 Aug 2006; Steve Arnold <nerdboy@gentoo.org> tiff-3.8.2-r2.ebuild:
  bumping mips stable, since there is only one clean tiff version at present

*tiff-3.8.2-r2 (04 Aug 2006)

  04 Aug 2006; Steve Arnold <nerdboy@gentoo.org>
  -files/tiff-3.7.4-assign-dont-compare.patch,
  +files/tiff-3.8.2-goo-sec.patch, -tiff-3.7.3.ebuild, -tiff-3.7.4.ebuild,
  -tiff-3.8.2.ebuild, -tiff-3.8.2-r1.ebuild, +tiff-3.8.2-r2.ebuild:
  rev bump for security patch (bug 142383) and old version cleanup
  (I'd like to keep the patch as visible as possible).

  13 Jul 2006; Steve Arnold <nerdboy@gentoo.org> tiff-3.8.2-r1.ebuild:
  updated jbig depend (fix for bug 139831)

  05 Jul 2006; Fabian Groffen <grobian@gentoo.org> tiff-3.8.2-r1.ebuild:
  Marked ppc-macos stable (bug #135881)

  03 Jul 2006; Thomas Cort <tcort@gentoo.org> tiff-3.8.2-r1.ebuild:
  Stable on alpha wrt Bug #131857.

  02 Jul 2006; Lars Weiler <pylon@gentoo.org> tiff-3.8.2-r1.ebuild:
  Stable on ppc; bug #131857.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> tiff-3.8.2-r1.ebuild:
  Stable on ppc64; bug #131857

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> tiff-3.8.2-r1.ebuild:
  Stable on sparc wrt #131857

  29 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> tiff-3.8.2-r1.ebuild:
  Stable on amd64 and x86 wrt bug #131857.

  28 Jun 2006; Stefan Schweizer <genstef@gentoo.org> tiff-3.8.2-r1.ebuild:
  QA: Add patch file to SRC_URI, use it from WORKDIR, fix use && epatch || die
  breakage thanks to whitehawk
