@@ -4,5 +4,6 @@ AUX tiff-jbig.patch 14636 RMD160 88f8069cda0e1a897961e2c69e6b787a7776124d SHA1 2
 DIST tiff-3.8.2-tiff2pdf.patch.bz2 8469 RMD160 735c468464fcd4662ac571ae4a92ae1e20a4736e SHA1 c121f0ba43cde1eb9b667ae55b9cab94f1fb83ff SHA256 1811b0ea3a7e1b09b398731a60aded50cea48a80347b3196fdbfe75cf9e878b9
 DIST tiff-3.8.2.tar.gz 1336295 RMD160 1b4d825e3be08764e953fc58246d0c25ab4dd17d SHA1 549e67b6a15b42bfcd72fe17cda7c9a198a393eb SHA256 be88f037080b93ce0a337b2b3ca5e8195f76885deb6c558cc3aa872ee848fc76
 EBUILD tiff-3.8.2-r2.ebuild 1702 RMD160 54f661a48f79040530da6c44603652db1abbf4e6 SHA1 0c704f70dd3ce8f8bcd62396223307d76a414c36 SHA256 7cbad60c28fc7c26bf7197b50254435c22b39729ee0ef1178ede018571e6b663
-MISC ChangeLog 13452 RMD160 b5c1621c6cb7897401a9c3ef097bdd50b666b138 SHA1 619c6afe26af7ede66c882839d0cbda46bd08fbf SHA256 5077f666480452c0d91e02a23577fa740ce13b6e0e6e096ea4c16ab8bdb14bd8
+EBUILD tiff-3.8.2-r3.ebuild 1745 RMD160 2cbff7501f75d08f9a9192c14c571b61ae0cf97c SHA1 d2a69470e249714e31bab655185d16d388322dc8 SHA256 870914b9c0ce49e54228ec8dd381b09cc1fc1a0a4278060e02a4fa95b4241c18
+MISC ChangeLog 13607 RMD160 1bb2dc4a2d51fbded79c29774cbddc8caaf10d73 SHA1 a046f9a4348fdf407f11bca9b3acad1ae6580e69 SHA256 6c6f8bc08999088c3ec635fc2893a45703d7a57bca96e10765a61dbddcf16f30
 MISC metadata.xml 447 RMD160 8df7883ab02a353acd993037450e7bbc984c052d SHA1 8ffef6a88ae70afbdea7f3be25e1e9a28b6698c5 SHA256 ee7391b2521ef9676ead67466ad7249f05f8d3c9bd8d8984bc0ceac8dcb804b3
