@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/tiff
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.96 2007/07/12 08:54:26 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/tiff/ChangeLog,v 1.97 2007/12/28 13:01:20 maekke Exp $
+
+*tiff-3.8.2-r3 (28 Dec 2007)
+
+  28 Dec 2007; Markus Meier <maekke@gentoo.org> +tiff-3.8.2-r3.ebuild:
+  fix the documentation dir wrt bug #142770 and quotes
 
   12 Jul 2007; Roy Marples <uberlord@gentoo.org> tiff-3.8.2-r2.ebuild:
   Keyworded ~sparc-fbsd
